Prevent college profile degree list items from overflowing into 2nd column

--- a/style.css
+++ b/style.css
@@ -1023,6 +1023,7 @@ ul.degree-results-list .program .credits-wrap a { border-bottom: 0; cursor: poin
 	-moz-column-gap: 20px; /* Firefox */
 	column-gap: 20px;
 }
+.degree-list li { overflow: hidden; }
 
 
 /**
